Overlap Fix

--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -87,7 +87,7 @@ a {
     top: 0;
     left: 50%;
     transform: translate(-50%, -70%);
-    z-index: 10;
+    z-index: 1;
 
     @include tablet{
         height: 949px;
