--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ a {
   top: 0;
   left: 50%;
   transform: translate(-50%, -70%);
-  z-index: 10;
+  z-index: 1;
 }
 @media (min-width: 768px) {
   .header__circle {
